added rounds endpoints
