# api/routes.py
@@ -1,6 +1,10 @@
 from db.queries import get_all_funds
 from db.queries import get_fund_by_id
 from db.queries import get_fund_by_short_name
+from db.queries import get_round_by_id
+from db.queries import get_round_by_short_name
+from db.queries import get_rounds_for_fund_by_id
+from db.queries import get_rounds_for_fund_by_short_name
 from distutils.util import strtobool
 from flask import abort
 from flask import request
@@ -31,3 +35,31 @@ def get_fund(fund_id):
         return fund
 
     abort(404)
+
+
+def get_round(fund_id, round_id):
+    # language = request.args.get("language")
+    short_name_arg = request.args.get("use_short_name")
+    use_short_name = short_name_arg and strtobool(short_name_arg)
+
+    if use_short_name:
+        round = get_round_by_short_name(fund_id, round_id, True)
+    else:
+        round = get_round_by_id(fund_id, round_id, True)
+    if round:
+        return round
+
+    abort(404)
+
+
+def get_rounds_for_fund(fund_id):
+    # language = request.args.get("language")
+    short_name_arg = request.args.get("use_short_name")
+    use_short_name = short_name_arg and strtobool(short_name_arg)
+
+    if use_short_name:
+        rounds = get_rounds_for_fund_by_short_name(fund_id, True)
+    else:
+        rounds = get_rounds_for_fund_by_id(fund_id, True)
+
+    return rounds if rounds else abort(404)
